--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h3>We are Creative</h3>
                 <h1>Designer</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-                <a class="vm" href="#">View More</a>
+                <a href="#">View More</a>
                 <a href="#">Hire Us</a>
             </div>
         </div>
